# NexusQ-AI

./: .gitignore  CMakeLists.txt  GUIDE_TESTS_FIXES.md  MEGA_UPDATE.md  QUICKSTART.md  QVM_IMPLEMENTATIONS.md  README.md  SUMMARY.txt  build_kernel.sh  build_tests.sh  extract_pdf.py  test_bell.qc  test_grover.qc  test_suite.sh  test_superposition.qc
apps/: app_demo.c  qedit.c  qsl.c  shell.c
boot/: boot.asm
include/sys/: config.h  qnet.h
kernel/core/: audit.c  governance.c  klog.c  kmain.c  migration.c  qproc.c  scheduler.c  stubs.c  svc_manager.c  syscalls.c
kernel/core/arch/x86/: isr.asm  qpu_ctx_switch.asm
kernel/core/include/: klog.h
kernel/fs/: ledgerfs.c  qdfs.c
kernel/memory/: kalloc.c
kernel/memory/include/sys/: kalloc.h  ledgerfs.h  qec.h  qproc.h  qsocket.h  scheduler.h
kernel/net/include/: qtcp.h
kernel/net/qnet/: purification.c  qnet.c  qtcp.c  routing.c
kernel/neural/: backends.c  nal.c
kernel/neural/include/sys/: neural.h
kernel/quantum/: qec.c
lib/: libnexus.c
lib/include/: nexus.h
modules/connectivity/: bluetooth.c  bt_asm.s
modules/contracts/include/: contract.h
modules/contracts/vm/: vm.c
modules/crypto/arch/x86/: sha256_core.asm
modules/crypto/include/: sha256.h  wallet.h
modules/crypto/ledgerfs/: hash.c
modules/crypto/wallet/: wallet.c
modules/graphics/: gpu.c
modules/graphics/include/: framebuffer.h  gpu.h
modules/neural/: qnn_xor.c
modules/neural/arch/x86/: neural_ops.asm
modules/neural/graphics/: nss.c
modules/neural/include/: neural.h
modules/neural/inference/: predict.c
modules/neural/models/: firewall_model.c  scheduler_model.c
modules/neural/qnn/: pqc.c
modules/neural/training/: train.c
modules/quantum/: dqc.c  mapper.c  noise.c  qaoa.c  qdbg.c  qec_neural.c  qec_sim.c  qexport.c  qhal.c  qkd.c  qmonitor.c  qns_layer.c  qopt.c  qprof.c  qvis.c  qvm.c  qvm_wrapper.c  repeater.c  teleport.c  tomography.c  visualization.c
modules/quantum/include/: qvm.h
modules/quantum/tomography/: engine.c  fidelity.c  visualization.c
modules/ui/: compositor.c
modules/vision/: vision_core.c
quantum_lib/: bernstein_vazirani.qc  deutsch.qc  ghz_state.qc  phase_estimation.qc  qft_3qubit.qc  qrng.qc  teleportation.qc  w_state.qc
services/: qnetd.c
tests/: test_governance.c  test_integration_1.c  test_kalloc_unit.c  test_ledgerfs.c  test_qec.c  test_qnet.c  test_qvm_unit.c  test_scheduler.c
